Fixat lite design och logga

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.1",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.25.0",
     "@mui/x-date-pickers": "^7.23.6",
     "@testing-library/jest-dom": "^5.14.1",
